--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -18,17 +18,16 @@
     <p>Me livrei da maldição.</p>
 
     <script>
-      var n1 = Number.parseInt(window.prompt('Digite um número: ')) // Transformando 'String' em 'Number'
+        var n1 = Number.parseInt(window.prompt('Digite um número: ')) // Transformando 'String' em 'Number'
 
-      var n2 = Number.parseInt(window.prompt('Digite outro número: '))  // 'parseInt' para números inteiros
+         var n2 = Number.parseInt(window.prompt('Digite outro número: '))  // 'parseInt' para números inteiros
                    // 'parseFloat' para números reais
                    // para que o JS decida qual usar, declarar somente 'Number'
 
-      var s = n1 + n2
-
-      window.alert('A soma dos valores é ' + s)
-      // (number + number) para adição
-      //(string + string) para concatenação
+        var s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
+        // (number + number) para adição
+        //(string + string) para concatenação
 
         // Comentários no JS em uma única linha
         /* Comentários maiores que uma linha */
