iniciando exercício completo

--- a/aula11-Condicoes(if-else)/ex009.html
+++ b/aula11-Condicoes(if-else)/ex009.html
@@ -15,9 +15,9 @@
         function verif() {
             var pais = document.getElementById('txt')
             var resp = document.getElementById('res')
-            resp.innerHTML = `Vivendo em ${pais}`
-                if (pais == 'Brasil'){
-            resp.innerHTML += `você é <strong>Brasileiro!</strong>`
+           
+                if (pais == `Brasil`){
+            resp.innerHTML += `<p>você é <strong>Brasileiro!</strong></p>`
                 } else {
             resp.innerHTML += `você é <strong>Estrangeiro!</strong>`
                 }
